--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint:format": "npm run lint:fix && npm run format"
+    "lint:format": "pnpm lint:fix && pnpm format",
+    "studio": "pnpm drizzle-kit studio",
+    "generate": "pnpm drizzle-kit generate",
+    "migrate": "pnpm drizzle-kit migrate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -40,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "better-auth": "^1.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -63,6 +67,7 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.3.6",
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^24.2.1",
