--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-form": "^1.19.2",
+    "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-table": "^8.21.3",
     "better-auth": "^1.3.6",
     "class-variance-authority": "^0.7.1",
@@ -72,6 +73,7 @@
     "@better-auth/cli": "^1.3.6",
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.12",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
