--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migrate": "pnpm drizzle-kit migrate"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -66,6 +67,7 @@
     "recharts": "^3.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.5",
     "vaul": "^1.1.2",
     "zod": "^4.0.17"
   },
